err/rptk.err
Listing '.'...
Listing './bin'...
Listing './etc'...
Listing './etc/rptk'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.8.1.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/ipaddress-1.0.19.egg-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_radix-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/radix'...
Listing './lib/python3.5/site-packages/rptk'...
Listing './lib/python3.5/site-packages/rptk/modules'...
Listing './lib/python3.5/site-packages/rptk/modules/format'...
Listing './lib/python3.5/site-packages/rptk/modules/query'...
Compiling './lib/python3.5/site-packages/rptk/modules/query/native.py'...
***   File "./lib/python3.5/site-packages/rptk/modules/query/native.py", line 162
    except ipaddress.AddressValueError, ipaddress.NetmaskValueError:
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rptk/templates'...
Listing './lib/python3.5/site-packages/rptk/tests'...
Compiling './lib/python3.5/site-packages/rptk/tests/test_cases.py'...
***   File "./lib/python3.5/site-packages/rptk/tests/test_cases.py", line 25
    print "api query with query=%s format=%s passed" % (q, f)
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rptk/wiki'...
Listing './lib/python3.5/site-packages/rptk-0.1.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/whichcraft-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
